--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.2",
+    "classnames": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.4",
+    "recharts": "^2.12.7",
     "stripe": "^15.10.0",
     "swiper": "^11.0.7"
   },
